--- a/starter-code/UserInfoTabs/app/src/main/res/values/strings.xml
+++ b/starter-code/UserInfoTabs/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_about_fragment">AboutFragment</string>
+    <string name="title_activity_contact_fragment">ContactFragment</string>
 </resources>
